# stern-brocot-representation

./: .gitignore  LICENSE  README.md  challenge02.cabal  editor.xml  filetypes.xml  ignore.xml  ui.lnf.xml  vcs.xml
_windows/: path.macros.xml
app/: Main.hs
src/: Lib.hs
test/: LibSpec.hs
