name:                AragonBermudez_Practica07
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tormenteddan/MP-2018-1-p07
license:             BSD3
license-file:        LICENSE
author:              Luis Daniel Aragon Bermudez
maintainer:          daniel.aragon@ciencias.unam.mx
copyright:           BSD
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       matrix
                     , numeric-quest
  default-language:    Haskell2010

executable challenge02
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AragonBermudez_Practica07
                     , numeric-quest
  default-language:    Haskell2010

test-suite challenge02-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AragonBermudez_Practica07
                     , numeric-quest
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tormenteddan/MP-2018-1-p07
